drafted intro addition

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -216,6 +216,17 @@
   publisher={Academic Press}
 }
 
+@article{kurtz2013human,
+  title={Human learning of elemental category structures: Revising the classic result of Shepard, Hovland, and Jenkins (1961).},
+  author={Kurtz, Kenneth J and Levering, Kimery R and Stanton, Roger D and Romero, Joshua and Morris, Steven N},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={39},
+  number={2},
+  pages={552-572},
+  year={2013},
+  publisher={American Psychological Association}
+}
+
 @article{luce1977choice,
   title={The choice axiom after twenty years},
   author={Luce, R Duncan},
