--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -88,47 +88,24 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \setlength\parindent{0.5in}
 
 
-The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products of the processes underlying conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life -- indeed, the generation of novel sentences, works of art, and so on may also be considered as products of our capacity to create new concepts. Although this capacity is of great interest, it is also of great complexity and can be difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
+The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also of great complexity and can be difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
 
-Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly addressed using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. While these approaches have made great advances in our understanding of creativity, the focus on creative {\em products} makes difficult the task of formalizing proposed processes and representations within a computational modeling framework, and so the field does not benefit from the application of computational models to evaluate theories.
+Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on creative {\em products} makes difficult the task of formalizing proposed processes and representations within a computational modeling framework, and so the field does not benefit from the application of computational models to evaluate theories.
 
 \nbcnote{Maybe a bit about why that would be good?}
 
-However, many of these proposed processes are not altogether different from cognitive processes typically studied in laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting the category given feature information, see][]{shepard1961learning,nosofsky1994comparing} and inference \citep[predicting unobserved features given observed features and a category label, see][]{markman2003category}. Under this framing, the generation of new category members consists of inferring the {\em all} features given a novel category label. Thus, we can make progress in developing formal theories of creative generation by extending theories of categorization to the task of category generation.
+The act of generating a new concept is, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting an object's category given its features;][]{shepard1961learning,kurtz2013human} and inference \citep[predicting an object's unobserved features given observed features and a category label, see][]{markman2003category}. The generation of members of a new category consists of inferring the {\em all} features given a {\em novel} category label. Thus, we can make progress formalizing the processes involved in creative generation by extending theories of categorization to the special case.
 
+\nbcnote{Note that this problem has been under-studied in the categorization lit?}
 
+% % OLD INTRO:
+% Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
 
-% Question: How do people create new concepts?
-%     + [Maybe an example of this here, maybe not.]
-
-% Typically this question is approached from the lit on creativity, which uses a wide variety of approaches such as [X], [Y], [etc]
-
-% While traditional approaches have made great advances, they make it difficult to formalize the creative processes within a computational modeling framework.
-%     + [Maybe a line about how computational approaches have been fruitful in other fields, or how we'd ideally like to create machines with the creative capacity of humans.]
-
-% Many aspects of the creative process, however, are not altogether different from cognitive processes typically studied in laboratories. In particular, creating members of a new category can be considered a form of inference using one's knowledge of categories.
-%     + [Show some depiction of different types of inferences using category knowledge (classification, inference, generation), maybe that table.]
-%     + [Cite that Kemp taxonomy paper, Ken's PLM chapter.]
-
-% Under this framing, the generation of categories can be studied using toolkit of categorization. 
-
-% However, this application of category knowledge has been broadly under-explored within the literature on categorization.
-%     + [Progress in this area not only informs our understanding of creativity, but also categorization]
-
-% Foundational work on the topic [ward intro] ...
-%     + [From here, we can probably append the intro as is, starting from the creative cognition section.]
-
-
-
-
-
-Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
-
-Towards the aim of providing a formal account of the cognitive mechanisms involved in creativity and innovation, we explore a form of creative cognition that can be studied using standard behavioral methodology and is amenable to formal modeling: category generation. In a category generation task, participants are given some background knowledge about a domain (a cover story and/or learning one or more categories in the domain) and then are asked to generate another category in the domain. Unlike creativity and innovation, categorization is well studied from a breadth of perspectives, including behavioral, neural, comparative, and computational  \citep{kurtz2015human,mack2013,margolis2015,pothoswills2011}. By analyzing a creative task using formal tools from the categorization literature, we can formalize some theories of creativity and test them empirically in a more rigorous manner. 
+% Towards the aim of providing a formal account of the cognitive mechanisms involved in creativity and innovation, we explore a form of creative cognition that can be studied using standard behavioral methodology and is amenable to formal modeling: category generation. In a category generation task, participants are given some background knowledge about a domain (a cover story and/or learning one or more categories in the domain) and then are asked to generate another category in the domain. Unlike creativity and innovation, categorization is well studied from a breadth of perspectives, including behavioral, neural, comparative, and computational  \citep{kurtz2015human,mack2013,margolis2015,pothoswills2011}. By analyzing a creative task using formal tools from the categorization literature, we can formalize some theories of creativity and test them empirically in a more rigorous manner. 
 
 Previous work in categorization has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
 
-To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Beyond the assumption that participant-generated categories are indeed novel, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. Building on the largely successful exemplar modeling framework \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. This model makes novel predictions about how contrast affects category generation, which we test using behavioral experiments.
+To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Beyond the assumption that newly generated concepts are indeed novel, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. Building on the largely successful exemplar modeling framework \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. This model makes novel predictions about how contrast affects category generation, which we test using behavioral experiments.
 
 The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. Then we describe our novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
 
