framing applied to remainder of document

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -19,6 +19,17 @@
   year = {1950}
 }
 
+@article{ashby1994categorization,
+  title={Categorization response time with multidimensional stimuli},
+  author={Ashby, F Gregory and Boynton, Geoffrey and Lee, W William},
+  journal={Perception \& Psychophysics},
+  volume={55},
+  number={1},
+  pages={11--27},
+  year={1994},
+  publisher={Springer}
+}
+
 @article{hillenbrand1995,
   author = {J. M. Hillenbrand and L. A. Getty and M. J. Clark and K. Wheeler},
   title = {Acoustic characteristics of {A}merican {E}nglish vowels},
@@ -150,6 +161,26 @@
   pages={1--18},
   year={2011},
   publisher={Elsevier}
+}
+
+@article{hurvich1989regression,
+  title={Regression and time series model selection in small samples},
+  author={Hurvich, Clifford M and Tsai, Chih-Ling},
+  journal={Biometrika},
+  pages={297--307},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{imai1965discriminability,
+  title={Discriminability and preference for attributes in free and constrained classification.},
+  author={Imai, Shiro and Garner, WR},
+  journal={Journal of Experimental Psychology},
+  volume={69},
+  number={6},
+  pages={596},
+  year={1965},
+  publisher={American Psychological Association}
 }
 
 @article{jern2013probabilistic,
@@ -431,6 +462,17 @@
   pages={382--439},
   year={1976},
   publisher={Elsevier}
+}
+
+@article{schwarz1978estimating,
+  title={Estimating the dimension of a model},
+  author={Schwarz, Gideon},
+  journal={The annals of statistics},
+  volume={6},
+  number={2},
+  pages={461--464},
+  year={1978},
+  publisher={Institute of Mathematical Statistics}
 }
 
 @article{shepard1957stimulus,
