added alternative models bit, comparison of task to ward

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -237,6 +237,17 @@
   publisher={American Psychological Association}
 }
 
+@article{kurtz2007divergent,
+  title={The divergent autoencoder (DIVA) model of category learning},
+  author={Kurtz, Kenneth J},
+  journal={Psychonomic Bulletin \& Review},
+  volume={14},
+  number={4},
+  pages={560--576},
+  year={2007},
+  publisher={Springer}
+}
+
 @article{kurtz2015human,
   title={Human category learning: Toward a broader explanatory account},
   author={Kurtz, Kenneth J},
@@ -255,6 +266,17 @@
   number={2},
   pages={552-572},
   year={2013},
+  publisher={American Psychological Association}
+}
+
+@article{love2004sustain,
+  title={SUSTAIN: a network model of category learning.},
+  author={Love, Bradley C and Medin, Douglas L and Gureckis, Todd M},
+  journal={Psychological review},
+  volume={111},
+  number={2},
+  pages={309},
+  year={2004},
   publisher={American Psychological Association}
 }
 
@@ -529,6 +551,16 @@
   year = {2010}
 }
 
+@article{smith2000thirty,
+  title={Thirty categorization results in search of a model.},
+  author={Smith, David J and Minda, John Paul},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={26},
+  number={1},
+  pages={3},
+  year={2000},
+  publisher={American Psychological Association}
+}
 
 @book{smith1995creative,
   title={The creative cognition approach},
