--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -88,13 +88,9 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 
 The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also of great complexity and can be difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
 
-Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on creative {\em products} makes difficult the task of formalizing proposed processes and representations within a computational modeling framework, and so the field does not benefit from the application of computational models to evaluate theories.
-
-\nbcnote{Maybe a bit about why that would be good?}
+Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on creative  products such as drawings makes difficult the task of formalizing proposed processes and representations within a computational modeling framework, and so work following this approach does not often employ computational models to provide formal tests of competing theories. 
 
 The act of generating a new concept is, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting an object's category given its features;][]{shepard1961learning,kurtz2013human} and inference \citep[predicting an object's unobserved features given observed features and a category label, see][]{markman2003category}. The generation of members of a new category consists of inferring the {\em all} features given a {\em novel} category label. Thus, we can make progress formalizing the processes involved in creative generation by extending theories of categorization to the special case.
-
-\nbcnote{Note that this problem has been under-studied in the categorization lit?}
 
 % % OLD INTRO:
 % Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
@@ -158,6 +154,9 @@ Re-analyzing the results of \cite{jern2013probabilistic} provides preliminary su
 \label{section:PACKER-definition}
 
 As noted above, the constraint that new concepts should differ from what is already known has been largely overlooked in previous work. This is no doubt in part due to the vague definition of what it means for a concept to be ``different'': A generated category may be different from what is already known in any number of respects. Towards providing a more precise definition of the role of contrast in creative generation, we formalized contrast in a novel exemplar model, PACKER  ({\em Producing Alike and Contrasting Knowledge using Exemplar Representations}). PACKER explains category generation as a balance between two fundamental constraints: The category to be generated should not be similar to known categories, and exemplars within each category should be similar to one another. These ideas are implemented within the well-studied exemplar framework -- the PACKER model is an extension of the influential Generalized Context Model of category learning \citep[GCM;][]{nosofsky1984choice,nosofsky1986attention}. 
+
+Although, as an exemplar model, one of PACKER's proposals is people represent categories in terms of a collection of stored exemplars, it is worth emphasizing that the underlying nature of human category representations is not the primary concern of our work. The choice to develop PACKER within an exemplar framework reflects the facts that exemplar models are well-studied, strongly theoretically motivated, and dominate much of the theoretical and empirical work in categorization. The focus of our work with PACKER concerns the dual constraints of within- and between-class similarity; it is not difficult to imagine how such constraints may be instantiated using alternative frameworks (e.g., \citealp{kurtz2007divergent,love2004sustain,smith2000thirty}; for a review, see \citealp{pothoswills2011}).
+
 
 Both PACKER and the GCM simulate categorization under the assumption that learners represent categories as a collection of exemplars, corresponding to the labeled stimuli they have observed. The exemplars are encoded within a $k$-dimensional psychological space, and model performance is based on the amount of similarity between the item to be categorized and the stored exemplars. Similarity between two examples, $s\left(x_i, x_j\right)$, is computed as an inverse exponential function of distance \citep[following][]{attneave1950,shepard1957stimulus,shepard1987toward}:
 
@@ -244,6 +243,8 @@ Interestingly, the XOR condition also offers a dissociation between the roles of
 183 participants were recruited from Amazon Mechanical Turk. Each participant was randomly assigned to one condition: 64 participants were assigned to the Cluster condition, 61 were assigned to the Row condition, and 58 were assigned to the XOR condition (sample sizes differ due to random assignment). Stimuli were squares varying in color (grayscale 9.8\%--90.2\%) and side length (3.0--5.8cm), see Figure \ref{fig:e1-conditions}. The assignment of perceptual features (color, size) to axes of the domain space (x, y), as well as the direction of variation along each axis (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants.
 
 \subsection{Procedure}
+
+As noted in the introduction of this paper, the task of generating members of a new category can be aligned with common tasks studied in the categorization literature: Whereas classification consists of predicting an object's category label on the basis of its features, inference consists of predicting an observed feature, given a set of observed features and a category label. Generation thus consists of predicting {\em all} features of an object, given a novel category label. In keeping with this insight, we designed our generation task as an extension of the traditional artificial classification learning paradigm. The task differs from traditional work in creative cognition primarily through the use of an artificial domain, which enables the application of computational models. Unlike previous studies \citep[e.g.,][]{ward1994structured}, participants in our studies have no experience with the domain before the start of the experiment, and the experimenter-defined categories are not hierarchically structured (as are plants and animals).
 
 Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired to observe it before moving on to the next trial. Each block consisted of a single presentation of each of the members of the Alpha category, in a random order. Participants were shown the range of possible colors and sizes prior to training.
 
@@ -535,12 +536,9 @@ In addition to an analysis of published data \citep[][Experiment 3]{jern2013prob
 We conducted simulations comparing PACKER's account of our results to that of a ``copy-and-tweak'' model (realized as a variant of PACKER with no sensitivity to category contrast), and a hierarchical sampling model designed to explain the classic distributional similarity effect. In all simulations, we found that PACKER's sensitivity to contrast considerably enhanced the models account of human category generation. Further, by measuring PACKER's fit as a function of its prioritization of within- and between-category similarity, we observed that considering either constraint exclusively results in a relatively low-quality account. Instead, PACKER's best results were obtained when both constraints are considered, indicating that human learners do not generate novel concepts exclusively on the basis of within-category similarity or between class-contrast. This finding mirrors our behavioral results and demonstrates that both constraints influence creative generation. 
 
 \subsection{Similarity and Contrast in Cognition}
-The proposal that category contrast is a primary constraint in creative generation is, in some ways, entirely commonsense. To successful create something \textit{new}, it must be different from what is known. Beyond its role in creative generation, category contrast is also of fundamental importance in categorization more broadly. All other factors held constant, new categories are easier to learn if they are dissimilar to members of other categories, and knowledge of highly distinct categories is applied more accurately than that of ill-defined categories \citep{ashby1994categorization,imai1965discriminability}. Likewise, basic-level categories \citep{rosch1976basic} are thought to be abstracted in order to maximize within-category similarity while minimizing between-category similarity. Finally, the act of forming category representations affects similarity judgments about category members and nonmembers, with category members being viewed as more similar to one another than members of other categories \citep{goldstone1994influences,goldstone2001altering} .
-
+The proposal that category contrast is a primary constraint in creative generation is, in some ways, entirely commonsense. To successful create something \textit{new}, it must be different from what is known. Beyond its role in creative generation, category contrast is also of fundamental importance in categorization more broadly. All other factors held constant, new categories are easier to learn if they are dissimilar to members of other categories, and knowledge of highly distinct categories is applied more accurately than that of ill-defined categories \citep{ashby1994categorization,imai1965discriminability}. Likewise, basic-level categories \citep{rosch1976basic} are thought to be abstracted in order to maximize within-category similarity while minimizing between-category similarity. Finally, the act of forming category representations affects similarity judgments about category members and nonmembers, with category members being viewed as more similar to one another than members of other categories \citep{goldstone1994influences,goldstone2001altering}.
 
 Beyond categorization, one can find instances of the trade-off between within and between-class similarity in linguistic categories over perceptual dimensions. For example, \cite{regier2007} showed that the partitioning of color categories reflects such a trade-off in a psychological space -- colors are partitioned into groups with members that are viewed as highly similar to one another yet distinct from other colors. A similar trade-off can be observed in phoneme categories. Different exemplars of the same phoneme must be similar to one another, while contrasting from other phonemes, such that a listener can infer the appropriate phoneme. This pattern has been found and modeled in the natural acoustics of American English vowels \citep{feldman2013,hillenbrand1995}. As linguistic categories must have been created at some point in human history, it is revealing that the constraints of emulating distributional structure across categories and having categories contrast from one another still bias human category generation today.
-
-\nbcnote{Something about analogy (similar relationally but different feature-ally); generated categories are alike in distributional structure but differently located in domain}
 
 The above passages serve to demonstrate that the dual forces of within-class similarity and between-class contrast influence cognitive function in a wide variety of domains. The PACKER model is notable in that it successfully interprets this trade-off within the domain of creative generation, and allows us to begin to understand the relatively understudied processes involved in creative generation through our more well-developed knowledge of human categorization.
 
