I SAY WITH GREAT SURETY THAT THIS IS THE MOST TREMENDOUS, GREATEST COMMIT OF ALL TIME

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -183,6 +183,27 @@
   publisher={American Psychological Association}
 }
 
+@article{kemp07,
+	author = {C. Kemp and A. Perfors and J. B. Tenenbaum},
+	title = {Learning overhypotheses with hierarchical {B}ayesian models},
+	journal = {Developmental Science},
+	volume = {10},
+	number = {3},
+	pages = {307--321},
+	year = {2007}
+}
+
+
+@incollection{griffithsscn07,
+	Address = {Oxford, England},
+	Author = {T. L. Griffiths and A. N. Sanborn and K. R. Canini and D. J. Navarro},
+	Booktitle = {The probabilistic mind},
+	Editor = {N. Chater and M. Oaksford},
+	Publisher = {Oxford University Press},
+	Title = {Categorization as nonparametric {B}ayesian density estimation},
+	Year = {2008}}
+
+
 @article{jern2013probabilistic,
   title={A probabilistic account of exemplar and category generation},
   author={Jern, Alan and Kemp, Charles},
